--- a/Arex388.GoogleMaps.csproj
+++ b/Arex388.GoogleMaps.csproj
@@ -10,11 +10,11 @@
     <PackageProjectUrl>https://github.com/arex388/Arex388.GoogleMaps</PackageProjectUrl>
     <RepositoryUrl>https://github.com/arex388/Arex388.GoogleMaps</RepositoryUrl>
     <PackageTags>google-maps arex388</PackageTags>
+    <Version>1.0.3</Version>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
-    <PackageReference Include="ObjectDumper.NET" Version="1.0.7" />
   </ItemGroup>
 
   <ItemGroup>
